# android-jni-demo

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIEnv.cpp  JNIEnv.h  OkHttp.cpp  OkHttp.h  PowerSyncConnector.cpp  PowerSyncConnector.h  PowerSyncDB.cpp  PowerSyncDB.h  PowerSyncSchema.cpp  PowerSyncSchema.h  cpp-adapter.cpp  secrets.h
app/src/main/java/com/powersync/demo/android/jni/: MainActivity.kt
app/src/main/java/com/powersync/demo/android/jni/wrapper/: NativeBridge.kt  NativeConnector.kt  NativeDB.kt  OkHttpClient.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kotlinApp/: build.gradle.kts
kotlinApp/src/main/: AndroidManifest.xml
kotlinApp/src/main/java/com/powersync/demo/android/kotlinapp/: MainActivity.kt  main.kt
kotlinApp/src/main/java/com/powersync/demo/android/kotlinapp/powersync/: DemoConnector.kt  Schema.kt
kotlinApp/src/main/java/com/powersync/demo/android/kotlinapp/state/: Lists.kt  Nav.kt  Todos.kt
kotlinApp/src/main/res/values/: themes.xml
nativeApp/: build.gradle.kts
nativeApp/src/main/: AndroidManifest.xml
nativeApp/src/main/cpp/: CMakeLists.txt  OkHttp.cpp  OkHttp.h  PowerSyncConnector.cpp  PowerSyncConnector.h  PowerSyncDB.cpp  PowerSyncDB.h  cpp-adapter.cpp  utils.cpp  utils.h
nativeApp/src/main/java/com/powersync/demo/android/jni/: MainActivity.kt
nativeApp/src/main/res/values/: strings.xml
nativeApp/src/main/res/xml/: network_security_config.xml
(+17 files in other folders)
